workdaround for jpackage bug